updates element widths: cascading issues from new spacing

--- a/asset/scss/bttf.scss
+++ b/asset/scss/bttf.scss
@@ -361,7 +361,7 @@ body.vertical-menu #content #blocks {
   }
 }
 
-.center.medium .attachments\ {
+.center.medium .attachments {
   @extend .medium-up-3;
   justify-content: unset;
 }
